<resources>
    <string name="app_name">CAS Dashboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_box_title">CleanAir Monitoring Sys tem - Login</string>
    <string name="company_name">Company</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login_btn_text">     Login     </string>
    <string name="remember_credentials">Remember Credentials</string>
    <string name="locked_mode">Locked Mode</string>
    <string name="spinner_tip">Location</string>
    <string name="please_loading_text">Loading...</string>
    <string name="air_quality">Air Quality</string>
    <string name="cms">CMS</string>
    <string name="indoor_text">INDOOR:</string>
    <string name="pm_value_text">PM2.5</string>
    <string name="unit_pm">μg/m3</string>
    <string name="moderate">Moderate</string>
    <string name="tvoc">TVOC</string>
    <string name="co2">CO2</string>
    <string name="unit_tvoc">mg/m³</string>
    <string name="unit_co2">ppm</string>
    <string name="description_unknown_error">Unknown Error！</string>
    <string name="data_is_Null">Data is Null!</string>
    <string name="connection_error">Connection failed!</string>
    <string name="time_out_error">Time out!</string>
    <string name="http_status_error">Server network status exception!</string>
    <string name="time">
        Last Updated On:
    </string>
    <string name="good_air_status_txt">Good</string>
    <string name="moderate_air_status_txt">Moderate</string>
    <string name="aqi_status_unhealthy_sensitive_groups_abbrev">Unhealthy F.S.G</string>
    <string name="danger_txt">Bad</string>
    <string name="loading_graph_data">Loading data …</string>
</resources>